hphp/hack/test/typecheck/new_inference/array_filter_then_invoke.php.like_types.exp
File "array_filter_then_invoke.php", line 10, characters 25-35:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
